objects/Product_Recommendation__c.object
<CustomObject>
    <description>Recommended Products</description>
    <fields>
        <fullName>CPM_ID__c</fullName>
        <externalId>true</externalId>
        <label>CPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Product_CPM_ID__c</fullName>
        <label>Child Product CPM ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Recommended Product</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Recommendations (Child Product)</relationshipLabel>
        <relationshipName>Recommended_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product_CPM_ID__c</fullName>
        <label>Parent Product CPM ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Recommended Products</relationshipLabel>
        <relationshipName>Recommended_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Production Recommendation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Child_Product__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Child_Product__c</field>
            <operation>equals</operation>
            <value>3001</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REC-{0000}</displayFormat>
        <label>Recommendation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>